--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -1,16 +1,23 @@
 .landing-section {
   width:95vw;
   .space-thumbnail {
-    height: 120px;
-    vertical-align: top;
+    margin: 1rem;
+    height: 160px;
+    min-height:160px;
+    max-height:160px;
+    padding: 1em;
 
-    display: inline-block;
-    img {
-
+    img, .no-img {
       width: 100px;
     }
+    .no-img{
+      background-color:lightsteelblue;
+    }
+
+    .thumbnail-icons{
+      width: 100%;
+    }
   }
-  display: block;
   margin-bottom: 3em;
   margin-top: 3em;
 }
