--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -20,6 +20,12 @@
   }
   margin-bottom: 3em;
   margin-top: 3em;
+
+  form{
+    *{
+    max-width:16rem;
+    }
+  }
 }
 
 .user-settings-button {
