--- a/client/views/account.html
+++ b/client/views/account.html
@@ -1,5 +1,18 @@
 <div ui-view="bar"></div>
 
-<pre class="debug">{{user | json}}</pre>
+<pre class="debug">user: {{user | json}}</pre>
+<pre class="debug">at: {{tempAccessToken}}</pre>
 
+<form ng-hide="passwordSuccess" ng-submit="changePassword(newPassword, newPassword2)" layout="column" layout-align="center center">
 
+  <label for="password1">New Password</label>
+  <input id="password1" type="password" ng-model="newPassword" required>
+
+  <label for="password2">Verify new password</label>
+  <input id="password2" type="password" ng-model="newPassword2" required>
+
+  <input type="submit" value="Submit"> </input>
+
+</form>
+
+<p ng-bind="passwordSuccess"></p>
