--- a/client/views/sidebar/import/control-explore.html
+++ b/client/views/sidebar/import/control-explore.html
@@ -1,7 +1,7 @@
 
 <!--
-<button ng-click="explore(MediaAPI.SC.likes())">soundcloud likes</button>
-<button ng-click="explore(MediaAPI.SC.playlists())">soundcloud playlists</button>
+<button ng-click="explore(MediaAPI.soundcloud.likes())">soundcloud likes</button>
+<button ng-click="explore(MediaAPI.soundcloud.playlists())">soundcloud playlists</button>
 
 <button ng-click="downloadMorePosts()">load more music from facebook posts</button>
 -->
