--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -1,31 +1,57 @@
 .landing-section {
-  width:95vw;
+  width: 95vw;
   .space-thumbnail {
     margin: 1rem;
     height: 160px;
-    min-height:160px;
-    max-height:160px;
+    min-height: 160px;
+    max-height: 160px;
     padding: 1em;
 
     img, .no-img {
       width: 100px;
     }
-    .no-img{
-      background-color:lightsteelblue;
+    .no-img {
+      background-color: lightsteelblue;
     }
 
-    .thumbnail-icons{
+    .thumbnail-icons {
       width: 100%;
     }
   }
   margin-bottom: 3em;
   margin-top: 3em;
 
-  form{
-    *{
-    max-width:16rem;
+  form {
+    * {
+      max-width: 16rem;
     }
   }
+}
+
+.sidebar-close-button {
+  height: 2em;
+  width: 2em;
+  position: fixed;
+  right: 2em;
+  top: 0;
+  z-index: 5;
+  max-width: 100px;
+  cursor: pointer;
+
+}
+
+.sidebar-open-button {
+  right: 2em;
+  bottom: 0;
+  height: $bar-height;
+  width: 2em;
+  z-index: 5;
+  max-width: 100px;
+  cursor: pointer;
+  color: white;
+  background-color: black;
+  position: fixed;
+  top: 0;
 }
 
 .user-settings-button {
@@ -71,9 +97,8 @@
 
 .xyz-click-screen {
   position: relative;
-  top: $bar-height;
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   z-index: 2;
 }
 
@@ -89,9 +114,9 @@
 
 .loading-indicator {
 
-  width:100vw;
-  z-index:10000;
-  position:fixed;
+  width: 100vw;
+  z-index: 10000;
+  position: fixed;
   top: $bar-height;
 }
 
@@ -100,43 +125,18 @@
   top: $bar-height;
 }
 
-
-
 .user-spaces-container {
   margin-bottom: 400px;
 }
 
-.sidebar-close-button {
-  height: 2em;
-  width: 2em;
-  position: fixed;
-  right: 2em;
-  top: 0;
-  z-index: 5;
-  max-width: 100px;
-  cursor: pointer;
-
-}
-
-.sidebar-open-button {
-  right: 2em;
-  bottom: 0;
-  height: $bar-height;
-  width: 2em;
-  z-index: 3;
-  max-width: 100px;
-  cursor: pointer;
-  color: white;
-  background-color: black;
-  position: fixed;
-  top: 0;
-}
-
 .sidebar-container {
-  background: rgba(200, 180, 220, 0.94);
+  background: white;
+  border: 1px black solid;
   position: absolute;
   top: $bar-height;
+  margin-top: -2px;
   width: 100vw;
+  z-index: 3;
 
   text-align: center;
   @include MQ(M) {
@@ -161,5 +161,11 @@
 
   text-align: left;
 
+}
 
+.search-result {
+
+  .media-preview {
+    height: 100%;
+  }
 }
