--- a/client/scss/main/_xyz-item.scss
+++ b/client/scss/main/_xyz-item.scss
@@ -1,18 +1,19 @@
 
 .xyz-item {
-  height: 4em;
-  width: 4em;
   position: absolute;
   cursor: pointer;
   display: block;
-  z-index:3;
+  z-index: 3;
 
+  &.focused-dot {
+    z-index: 4;
+  }
 
   .dot {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
 
+    height: 4em;
+    width: 4em;
+    overflow: hidden;
 
     &.default {
       border: 2px dotted black;
@@ -20,11 +21,28 @@
     }
   }
 
-  .beside-song{
-    position:absolute;
-    top:0;
-    left:80px;
-    background-color:lightgreen;
+  .beside-song {
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 80px;
+    height:250px;
+    border: 1px black solid;
+
+    a {
+      max-height: 4rem;
+      overflow: hidden;
+      display: block;
+    }
 
   }
+
+
+
+  .preview-box{
+    width:300px;
+    height:100%;
+
+  }
+
 }
