--- a/client/scss/sidebar/_search-result.scss
+++ b/client/scss/sidebar/_search-result.scss
@@ -7,7 +7,7 @@
   }
 
   .search-result-actions {
-    background-color: #BFF7FF;
+    background-color: #EEE;
 
     button {
       background: none;
