--- a/client/views/space.html
+++ b/client/views/space.html
@@ -2,7 +2,7 @@
 </div>
 
 
-<div ng-repeat="item in Library.songs()"
+<div ng-repeat="item in space.songs"
      ng-include="'views/partials/media-item.html'"></div>
 
 
