--- a/client/views/partials/media-item.html
+++ b/client/views/partials/media-item.html
@@ -19,7 +19,7 @@
       <div>
         <div media-preview-toggle="item.attrs"></div>
         <button ng-click="setFirstSong(item.id)">set first song</button>
-        <button ng-click="Library.remove(item.id)">remove</button>
+        <button ng-click="removeSong(item.id)">remove</button>
       </div>
     </div>
 
