tooltips, fix contributor icon

--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -11,7 +11,7 @@
     </h1>
 
 
-    <md-icon class="icon material-design-icons light"
+    <md-icon class="icon-btn material-design-icons light"
              ng-class="{active:isEditing()}"
              ng-click="toggleSettings()"
              ng-if="User.get()">
