--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -4,8 +4,8 @@
 
 
     <h1 class="bar-title" ng-if="title()"> {{title()}}
-        <a ng-if="space && space.id" ng-href="stream/index.html#?playlist={{space.id}}" target="_blank">
-            <md-icon class="icon" ng-click="Player.playSpace(space.id)" ng-if="space.playlist[0]">play_arrow</md-icon>
+        <a ng-if="space && space.id" >
+            <md-icon class="icon-btn light" ng-click="playSpace(space)">play_arrow</md-icon>
 
         </a>
     </h1>
