xyzplayer misc tweaks

--- a/client/views/partials/space-thumbnail.html
+++ b/client/views/partials/space-thumbnail.html
@@ -35,10 +35,10 @@
         </md-icon>
       </div>
       <div>
-        <md-icon class="icon-btn" ng-click="Player.playSpace(space.id)" ng-if="space.playlist[0]">
+        <md-icon class="icon-btn" ng-click="playSpace(space)" ng-if="space.playlist[0]">
           play_arrow
           <md-tooltip md-delay="500">
-            Play the Space
+            Click to Play
           </md-tooltip>
         </md-icon>
       </div>
