--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -2,7 +2,7 @@
   color: white;
   z-index: 1;
 
-  height: 200px;
+  height: 300px;
   width: 100vw;
   background-color: black;
   text-align: center;
@@ -17,7 +17,7 @@
     margin: 0;
   }
   .media-box {
-    height: 200px;
+    height: 250px;
     position: absolute;
     top: 3em;
     width:100%;
@@ -50,13 +50,13 @@
     /* float: left; */
     white-space: nowrap;
     overflow: scroll;
-    margin-bottom:-100px;
-    padding-bottom:100px; /* to hide scrolbar */
+    margin-bottom:-100px !important;
+    padding-bottom:100px !important; /* to hide scrolbar */
 }
 
-#xyz-soundcloud-iframe, #widget2 {
+#xyz-soundcloud-iframe, #xyz-youtube-iframe {
   width: 100%;
-  height: 150px;
+  height: 100%;
 }
 
 @import "mock-media-provider/mock-media-provider";
